--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     crossorigin="anonymous">
     <link rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
   </head>
+  <style>
+      .bankicon{
+          font-size:150;
+          margin-bottom:10;
+      }
+      .titletext {
+          font-family: Georgia, 'Times New Roman', Times, serif;
+          margin-bottom: 35;
+          font-size:48;
+      }
+  </style>
   
   <body>
   <form method="POST">
+    <div class = "bankicon" align="center"><i class="bi bi-bank fa-lg"></i></div>
+    <div class = "titletext" align="center">BANKDATA</div>
     <h2 align="center">Log In</h2>
     <p align = "center">New here? <a href = "" style="text-decoration: none;">Sign up now!</a></p>  <!--fix this link when signup page created-->
     <div class="d-grid gap-2 col-6 mx-auto">
